<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorData"
    android:background="#ff8a63">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="32sp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:text="@string/author_data_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/author_data_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/changeAuthorDataName"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.3"
                android:text="@string/author_data_name_value"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/author_data_university" />

            <TextView
                android:id="@+id/changeAuthorDataUniversity"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.3"
                android:textColor="@color/white"
                android:text="@string/author_data_university_value"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/author_data_faculty"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/changeAuthorDataFaculty"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.3"
                android:textColor="@color/white"
                android:text="@string/author_data_faculty_value"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/changeAuthorDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:backgroundTint="#d14011"
            android:text="@string/author_data_change_btn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>