<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8a63"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/addMovieMainBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#d14011"
                android:text="@string/add_movie_main_btn"
                android:textColor="#fff" />

            <Button
                android:id="@+id/searchMovieMainBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#d14011"
                android:text="@string/search_movie_main_btn"
                android:textColor="#fff" />

            <Button
                android:id="@+id/deleteMovieBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#d14011"
                android:text="@string/delete_movie_main"
                android:textColor="#fff" />

            <Button
                android:id="@+id/movieListMainBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#d14011"
                android:text="@string/movie_list_main_btn"
                android:textColor="#fff" />

            <Button
                android:id="@+id/movieCalculatorMainBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#d14011"
                android:text="@string/calculator_main_btn"
                android:textColor="#fff" />

            <Button
                android:id="@+id/authorMainBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#d14011"
                android:text="@string/author_main"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:text="@string/movie_count_first_text" />
            <TextView
                android:id="@+id/movieCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/movie_count_second_text" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>