<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResult"
    android:background="#ff8a63">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="32sp"
            android:textColor="#fff"
            android:fontFamily="sans-serif-black"
            android:text="@string/information_about_movie_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/result_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/searchNameResult"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/result_desc"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/searchDescResult"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/result_mark"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/searchMarkResult"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/result_genre"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/searchGenreResult"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>